Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.0
-
None
-
Windows 10, Mingw 7.3
-
-
fa8cb43a7e90d1bf54c0dcc76ab41c537afc6e88 (qt/qtdeclarative/5.14)
Description
Seems like there is a regression on the qml library loading when I try to load a debug build of my plugin.
Using Qt 5.13.2 with Mingw 7.3 or MSVC 2017 it worked fine
Using Qt 5.14.0 it only works with MSVC 2017
If I use Qt 5.14.0 with mingw, I got an error "QQmlImportDatabase::resolvePlugin: Could not resolve plugin", my plugin name is "SharedQmld.dll"
The code responsible seems to be this, along with the new "release" build of Qt instead of debug and release:
qtdeclarative\src\qml\qml\qqmlimport.cpp:1860
# ifdef QT_DEBUG
QLatin1String("d.dll"), // try a qmake-style debug build first
# endif
If I remove the CMAKE_DEBUG_POSTFIX it is working fine
Attachments
Issue Links
- relates to
-
QTBUG-80792 MinGW: Regressions in 5.14.0
- Closed